--- a/notebooks/Data Exploration.ipynb
+++ b/notebooks/Data Exploration.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FIGSIZE = (14,8)"
+    "from utils import to_latex_table"
    ]
   },
   {
@@ -28,12 +28,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FIGSIZE = (14,8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_pickle('..//data//raw_data.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +228,7 @@
        "max      52.480000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_latex_table('..//tables//describe', df.describe(), index=True, nr_decimals=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +257,7 @@
        "252"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +413,7 @@
        "1990-01-08  6.167052  2.093233  5.318020  14.480057  0.742667  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -602,18 +620,28 @@
        "max       0.201229  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_change.describe()"
+    "df_change_describe = df_change.describe()\n",
+    "df_change_describe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_latex_table('..//tables//cleandescribe', df_change_describe.drop('count'), index=True, nr_decimals=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -640,10 +668,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1172e72b0>]"
+       "[<matplotlib.lines.Line2D at 0x11eeb82e8>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -666,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,16 +728,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211.5988538526684"
+       "192.76427284188725"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +832,7 @@
        "[1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010, 2012, 2014, 2016]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,16 +843,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11d404da0>"
+       "<matplotlib.legend.Legend at 0x124e03940>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -853,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,16 +917,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x145d414e0>"
+       "<matplotlib.legend.Legend at 0x124f8e860>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -924,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,16 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14712b160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1256d2d68>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -965,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,16 +1017,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14d6e92b0>"
+       "<matplotlib.legend.Legend at 0x125877400>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1024,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,16 +1156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14d3faef0>"
+       "<matplotlib.legend.Legend at 0x125c68780>"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1163,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,16 +1207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14d1b8080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x127e99c50>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1218,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,16 +1275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14d782438>"
+       "<matplotlib.legend.Legend at 0x1280c9c18>"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1282,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,16 +1361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14cb65be0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1280c94a8>"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1372,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1408,6 +1436,15 @@
     "ax.legend()\n",
     "\n",
     "print(mu_means, sigma_means)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.savefig('..//figures//distribution_means.png')"
    ]
   },
   {
